--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Nature Images</title>
 </head>
 
 <body>
@@ -63,6 +63,33 @@
             <img src="/Images/img9.jpg" alt="">
         </div>
     </section>
+
+    <footer class="footer-container">
+        <div class="photograph">
+           <h1>Photography</h1>
+           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam, est?</p>
+
+           <ul class="social-account">
+  
+            <li><a href=""><i class="fa fa-facebook fa-x"></i></a></li>
+            <li><a href=""><i class="fa fa-twitter fa-x"></i></a></li>
+            <li><a href=""><i class="fa fa-instagram fa-x"></i></a></li>
+            <li><a href="/"><i class="fa fa-linkedin fa-x"></i></a></li>
+        </div>
+        <div class="contact-info">
+           <h1>Contact Info</h1>
+           <li><i class="fa fa-map-marker"></i><span>New Delhi, India.</span></li>
+           <li><i class="fa fa-phone"></i><span>+91-9865899955</span></li>
+        </div>
+
+        <div class="newsletter">
+         <h1>News Letter</h1>
+         <form class="">
+            <input type="email" placeholder="Your email">
+            <input type="submit" value="send">
+          </form>
+        </div>
+    </footer>
 </body>
 <script src="https://kit.fontawesome.com/41a002b982.js" crossorigin="anonymous"></script>
 
