--- a/index.html
+++ b/index.html
@@ -36,31 +36,31 @@
 
     <section class="photos-container">
         <div class="photo">
-            <img src="/Images/img1.jpg" alt="">
+            <img src="Images/img1.jpg" alt="">
         </div>
         <div class="photo">
-            <img src="/Images/img2.jpg" alt="">
+            <img src="Images/img2.jpg" alt="">
         </div>
         <div class="photo">
-            <img src="/Images/img3.jpg" alt="">
+            <img src="Images/img3.jpg" alt="">
         </div>
         <div class="photo">
-            <img src="/Images/img4.jpg" alt="">
+            <img src="Images/img4.jpg" alt="">
         </div>
         <div class="photo">
-            <img src="/Images/img5.jpg" alt="">
+            <img src="Images/img5.jpg" alt="">
         </div>
         <div class="photo">
-            <img src="/Images/img6.jpg" alt="">
+            <img src="Images/img6.jpg" alt="">
         </div>
         <div class="photo">
-            <img src="/Images/img7.jpg" alt="">
+            <img src="Images/img7.jpg" alt="">
         </div>
         <div class="photo">
-            <img src="/Images/img8.jpg" alt="">
+            <img src="Images/img8.jpg" alt="">
         </div>
         <div class="photo">
-            <img src="/Images/img9.jpg" alt="">
+            <img src="Images/img9.jpg" alt="">
         </div>
     </section>
 
