--- a/index.html
+++ b/index.html
@@ -36,33 +36,51 @@
 
     <section class="photos-container">
         <div class="photo">
+            <i class="fa fa-camera" aria-hidden="true"></i>
             <img src="Images/img1.jpg" alt="">
         </div>
         <div class="photo">
+            <i class="fa fa-camera" aria-hidden="true"></i>
             <img src="Images/img2.jpg" alt="">
         </div>
         <div class="photo">
+            <i class="fa fa-camera" aria-hidden="true"></i>
             <img src="Images/img3.jpg" alt="">
         </div>
         <div class="photo">
+            <i class="fa fa-camera" aria-hidden="true"></i>
             <img src="Images/img4.jpg" alt="">
         </div>
         <div class="photo">
+            <i class="fa fa-camera" aria-hidden="true"></i>
             <img src="Images/img5.jpg" alt="">
         </div>
         <div class="photo">
+            <i class="fa fa-camera" aria-hidden="true"></i>
             <img src="Images/img6.jpg" alt="">
         </div>
         <div class="photo">
+            <i class="fa fa-camera" aria-hidden="true"></i>
             <img src="Images/img7.jpg" alt="">
         </div>
         <div class="photo">
+            <i class="fa fa-camera" aria-hidden="true"></i>
             <img src="Images/img8.jpg" alt="">
         </div>
         <div class="photo">
+            <i class="fa fa-camera" aria-hidden="true"></i>
             <img src="Images/img9.jpg" alt="">
         </div>
     </section>
+    <div class="banner">
+        <p>Start Your Journey!</p>
+        <h1>Lets Capture this world</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut hic quia corrupti ullam suscipit quam laboriosam voluptatem dolor autem magnam.</p>
+        <div class="book-trial-btn">
+            <button>Book trial</button>
+        </div>
+    </div>
+   
 
     <footer class="footer-container">
         <div class="photograph">
@@ -78,17 +96,23 @@
         </div>
         <div class="contact-info">
            <h1>Contact Info</h1>
-           <li><i class="fa fa-map-marker"></i><span>New Delhi, India.</span></li>
-           <li><i class="fa fa-phone"></i><span>+91-9865899955</span></li>
+           <ul>
+           <li><a>New Delhi, India</a></li>
+           <li><a>+91-9865899955</a></li>
+        </ul>
         </div>
 
         <div class="newsletter">
          <h1>News Letter</h1>
-         <form class="">
+         <p style="margin:5px;">Subscribe for latest Updates</p>
+         <form class="email">
             <input type="email" placeholder="Your email">
-            <input type="submit" value="send">
           </form>
+          <div class="subscribe-btn">
+            <button>Subscribe</button>
+          </div>
         </div>
+        
     </footer>
 </body>
 <script src="https://kit.fontawesome.com/41a002b982.js" crossorigin="anonymous"></script>
