--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <div class="nav-container">
+    <header class="nav-container">
         <div class="logo-container">
             <div class="img-container">
                 <i class="fa fa-camera" aria-hidden="true" style="font-size: 30px; color: aqua;"></i>
@@ -32,8 +32,15 @@
         <div class="book-trial-btn">
             <button>Book trial</button>
         </div>
-    </div>
-
+    </header>
+    
+    <section class="home">
+        <div class="blog">
+            <h1>Photographer's Blog</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde laboriosam possimus adipisci porro nesciunt. Illo.</p>
+        </div>
+    </section>
+    
     <section class="photos-container">
         <div class="photo">
             <i class="fa fa-camera" aria-hidden="true"></i>
